Cambios en las imagenes

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   </head>
   <body>
       <head>
-          <img src="/img/Group.png" alt="100%"> <br>
+          <img src="./img/Group.png" alt="100%"> <br>
           <a href="#">Recetas Dulces</a> <br>
           <a href="#">Recetas Saladas</a> <br>
           <a href="#">Contacto</a> <br>
           <hr>
       </head>
         <main>
-            <img src="/img/lemon-pie 2.jpg" alt="Lemon Pie Picture"> <br>
+            <img src="./img/lemon-pie 2.jpg" alt="Lemon Pie Picture"> <br>
             <h1>El clásico Lemon Pie</h1>
             <p>Es el preferido de los que les gusta lo dulce pero no lo empalagoso. El lemon pie es más bien una tarta, es decir, una base de masa y un relleno. Como su nombre lo indica está hecha con limón, más bien con el jugo del limón, azúcar y huevos. Todo eso mezclado hace el famoso custard, el relleno cremoso amarillo que es tan típico del lemon pie.</p>
             <article>
