Cambiando una palabra a cursiva

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </ul>
 
                 <p>Para la crema</p>
-                
+
                 <li type="none">150cc. de jugo de limón</li>
                 <li type="none">1 cucharadita de ralladura de limón</li>
                 <li type="none">4 yemas</li>
@@ -43,7 +43,7 @@
             <article>
                 <h2>Instrucciones</h2>
                 <ol>
-                    <li>Procesar o mezclar ligeramente la harina, el azúcar y la manteca fría cortada en cubitos, hasta formar un arenado. Agregar el huevo y unir la masa sin trabajarla mucho. Envolver en film y llevar a la heladera por 30 minutos aproximadamente</li>
+                    <li>Procesar o mezclar ligeramente la harina, el azúcar y la manteca fría cortada en cubitos, hasta formar un arenado. Agregar el huevo y unir la masa sin trabajarla mucho. Envolver en <i>film</i> y llevar a la heladera por 30 minutos aproximadamente</li>
                     <li>Precalentar el horno a temperatura media (180 °C)</li>
                     <li>Estirar sobre una mesada enharinada y tapizar un molde para tarta desmontable de 22 cm de diámetro. Cocinar durante 20 minutos o hasta que comience a dorarse</li>
                     <li>Mezclar la Leche Condensada Nestlé con 4 yemas, 150cc de jugo de limón y la ralladura. Unir bien y verter sobre la masa precocida. Cocinar en horno moderado durante 15 minutos</li>
